--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,16 @@
 DATABASE_URL=postgresql://app:app@localhost:5432/app
 DATABASE_ASYNC_URL=postgresql+asyncpg://app:app@localhost:5432/app
+SUPABASE_URL=http://127.0.0.1:54321
+# Anon key is used for public access
+SUPABASE_KEY=anon_key
+# Database password is used for the database connection with the supabase CLI 
+SUPABASE_DB_PASSWORD=password123!
+# Setup is based on using the discord auth provider
+SUPABASE_AUTH_DISCORD_CLIENT_ID=
+SUPABASE_AUTH_DISCORD_CLIENT_SECRET=
 
 ENVIRONMENT=LOCAL
 
 CORS_HEADERS=["*"]
-CORS_ORIGINS=["http://localhost:3000"]
+CORS_ORIGINS=["http://localhost:3000", "http://localhost:5173"]
+
