--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ asyncpg = "^0.29.0"
 uvicorn = {extras = ["standard"], version = "^0.30.1"}
 sentry-sdk = "^2.5.1"
 sqlmodel = "^0.0.22"
+supabase = "^2.10.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.4.8"
